# unplugged-search

./: .gitignore  Cargo.toml  README.md
index/: main.py
src/: lib.rs  main.rs  parser.rs
static/: index.css  index.html
templates/: results.html
