[package]
name = "unplugged-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = "1.18.1"
axum = "0.6.12"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread", "fs"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
